# services/server/src/controller/inventory_controller.py
@@ -1,0 +1,61 @@
+def add_product(body):  # noqa: E501
+    """Add a new product
+
+     # noqa: E501
+
+    :param body: Product that needs to be added
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def delete_product(productID):  # noqa: E501
+    """Deletes a product
+
+     # noqa: E501
+
+    :param productID: ID of product to be deleted
+    :type productID: int
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def get_all_products():  # noqa: E501
+    """Get all products
+
+    Returns all products # noqa: E501
+
+
+    :rtype: List[Product]
+    """
+    return 'do some magic!'
+
+
+def get_product_by_id(productID):  # noqa: E501
+    """Find product by ID
+
+    Returns a single product # noqa: E501
+
+    :param productID: ID of product to return
+    :type productID: int
+
+    :rtype: Product
+    """
+    return 'do some magic!'
+
+
+def update_product(body):  # noqa: E501
+    """Update an existing product
+
+     # noqa: E501
+
+    :param body: product that needs to be updated
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    return 'do some magic!'
