# services/server/src/controller/quote_controller.py
@@ -1,0 +1,48 @@
+def create_quote(body):  # noqa: E501
+    """Create a new quote
+
+     # noqa: E501
+
+    :param body: Quote that needs to be created
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def delete_quote(quoteID):  # noqa: E501
+    """Deletes a quote
+
+     # noqa: E501
+
+    :param quoteID: ID of quote to be deleted
+    :type quoteID: int
+
+    :rtype: None
+    """
+    return 'do some magic!'
+
+
+def get_all_quotes():  # noqa: E501
+    """Get all quotes
+
+    Returns all quotes # noqa: E501
+
+
+    :rtype: List[Quote]
+    """
+    return 'do some magic!'
+
+
+def get_quote_by_id(quoteID):  # noqa: E501
+    """Find quote by ID
+
+    Returns a single quote # noqa: E501
+
+    :param quoteID: ID of the quote to return
+    :type quoteID: int
+
+    :rtype: Quote
+    """
+    return 'do some magic!'
