# services/server/src/controller/user_controller.py
@@ -1,0 +1,11 @@
+def new_user(body):  # noqa: E501
+    """Register a new user
+
+     # noqa: E501
+
+    :param body: User that needs to be created
+    :type body: dict | bytes
+
+    :rtype: None
+    """
+    return 'do some magic!'
